--- a/frontend/sass/layout/_header.scss
+++ b/frontend/sass/layout/_header.scss
@@ -47,12 +47,12 @@ header {
 
             background-color: $background-color; //same color as the rest of the website
 
-            padding: 10px;
+            padding: 10px 60px 10px 10px;
 
             //content sizing
             @media screen and (min-width: 768px) {
                 min-width: 250px;
-                max-width: 20vw;
+                max-width: 40vw;
             }
 
             @include respond(mobile) {
