--- a/frontend/sass/styles.css
+++ b/frontend/sass/styles.css
@@ -91,7 +91,7 @@ header .dropdown__content {
   right: 0;
   top: 100px;
   background-color: #ecf0f3;
-  padding: 10px;
+  padding: 10px 60px 10px 10px;
 }
 
 @media only screen and (max-width: 767px) {
@@ -103,7 +103,7 @@ header .dropdown__content {
 @media screen and (min-width: 768px) {
   header .dropdown__content {
     min-width: 250px;
-    max-width: 20vw;
+    max-width: 40vw;
   }
 }
 
