--- a/frontend/sass/components/_avatar.scss
+++ b/frontend/sass/components/_avatar.scss
@@ -4,11 +4,13 @@
     object-fit: cover;
     height: 60px;
     width: 60px;
+    border: 0px solid $focus-color; //defining invisible border with $focus color so the transition doesn't start from black
     @include respond(mobileLandscape) {
         height: 50px;
         width: 50px;
     }
     &:focus {
         border: 5px solid $focus-color;
+        transition: 0.1s; //lil transition makes my heart happy :)
     }
 }
