--- a/frontend/sass/styles.css
+++ b/frontend/sass/styles.css
@@ -348,6 +348,7 @@ input:focus {
      object-fit: cover;
   height: 60px;
   width: 60px;
+  border: 0px solid #d1d9e6;
 }
 
 @media only screen and (max-width: 767px) {
@@ -359,6 +360,8 @@ input:focus {
 
 .avatar:focus {
   border: 5px solid #d1d9e6;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
 }
 
 .connexion {
@@ -785,8 +788,4 @@ input:focus {
       -ms-flex-align: center;
           align-items: center;
 }
-
-/*
-// 7. Themes
-@import "themes/default";*/
 /*# sourceMappingURL=styles.css.map */
