--- a/frontend/sass/styles.css
+++ b/frontend/sass/styles.css
@@ -397,28 +397,19 @@ input:focus {
   place-items: center;
 }
 
-@media screen and (min-width: 768px) {
-  .connexion__wrapper {
-    min-width: 600px;
-    max-width: 40vw;
-  }
-}
+.connexion__wrapper {
+  /* @media screen and (min-width: 768px) {
+            min-width: 600px;
+            max-width: 40vw;
+        }
 
-@media only screen and (max-width: 767px) {
-  .connexion__wrapper {
-    width: 80vw;
-  }
+        @include respond(mobileLandscape) {
+            width: 80vw;
+        }*/
 }
 
 .connexion__wrapper .logo {
   width: 100%;
-}
-
-.connexion__wrapper form {
-  border-radius: 20px;
-  -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
-          box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
-  padding: 1vw 5vw;
 }
 
 .connexion__wrapper form button {
