--- a/frontend/sass/styles.css
+++ b/frontend/sass/styles.css
@@ -569,13 +569,12 @@ input:focus {
 
 .inscription form .imgUpload input[type="file"] {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
+  left: 0;
+  opacity: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  outline: 2px solid aquamarine;
 }
 
 .inscription form .imgUpload .custom-file-upload {
