--- a/frontend/sass/components/_admin.scss
+++ b/frontend/sass/components/_admin.scss
@@ -1,3 +1,5 @@
+//this stylesheet styles the buttons for the moderator
+
 .adminDelete {
     display: none !important; //hidden by default
     width: 50px;
