--- a/frontend/sass/components/_button.scss
+++ b/frontend/sass/components/_button.scss
@@ -23,6 +23,9 @@ button {
     @include respond(mobileLandscape) {
         font-size: $font-default;
     }
+    & :focus {
+        background-color: $focus-color;
+    }
 }
 
 .formExit {
