--- a/frontend/sass/pages/_connexion.scss
+++ b/frontend/sass/pages/_connexion.scss
@@ -4,6 +4,7 @@
     display: grid;
     place-items: center;
 
+    //items are placed in a wrapper to be easily centered
     &__wrapper {
         .logo {
             //logos take 100% of the space they are allowed to
