--- a/frontend/sass/pages/_feed.scss
+++ b/frontend/sass/pages/_feed.scss
@@ -1,12 +1,65 @@
 // This is the file where all the specific styles for the feed are defined (everything that's not defined at pages/general)
 
 .filActualite {
+    //icons
     i {
         font-size: 40px;
         @include respond(mobile) {
             font-size: 35px;
         }
     }
+
+    //this is the line for both the img and gif adding buttons
+    .post__line--media {
+        display: flex;
+        justify-content: center;
+        @include respond(mobile) {
+            justify-content: flex-start;
+        }
+
+        //styling the buttons to insert gifs or images
+        .custom-file-upload {
+            display: inline-block;
+            position: relative;
+            //defining size of the button
+            height: 50px;
+            width: 50px;
+            margin-top: 10px;
+            border-radius: 50%;
+            @include shadow;
+
+            &:nth-of-type(2) {
+                //margin-left to the second button
+                margin-left: 10px;
+            }
+
+            input[type="file"] {
+                //making the actual input invisible
+                position: absolute;
+                left: 0;
+                opacity: 0;
+                top: 0;
+                bottom: 0;
+                width: 100%;
+            }
+
+            i {
+                //centering icon in the button
+                position: absolute;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                //color of the icon
+                color: $accent-color;
+            }
+        }
+    }
+
+    //this is the line with the avatar, the input and the send button
     .writeLine {
         display: flex;
         justify-content: space-between;
@@ -43,6 +96,7 @@
         }
     }
 
+    //that's the block containing the comments
     .comments {
         .writeLine {
             margin-bottom: 40px;
@@ -52,6 +106,7 @@
         }
     }
 
+    //that's the line composed of the avatar, first and last names
     .idLine {
         margin-bottom: 10px;
         display: flex;
@@ -66,81 +121,33 @@
         }
     }
 
+    //this is the bloc containing the other users' publication
     .publication {
         margin-bottom: 20px;
+        //that is the bloc for the actual publication (img and/or text)
+        &__content {
+            img {
+                max-width: 100%;
+            }
+
+            p {
+                margin: 10px 0;
+            }
+        }
     }
 
-    .publicationContent {
-        img {
-            max-width: 100%;
-        }
-
-        p {
-            margin: 10px 0;
-        }
-    }
-
+    //this is the line with the like and comment buttons and counters
     .reactionLine {
-        display: flex;
+        display: flex; //aligning icons
+
+        //styling icons
         i {
             cursor: pointer;
             color: $primary-color;
-            :focus {
-                color: $accent-color;
-            }
         }
 
         &--comments {
-            margin-left: 20px;
-        }
-    }
-
-    .post__line--media {
-        display: flex;
-        justify-content: center;
-        @include respond(mobile) {
-            justify-content: flex-start;
-        }
-
-        //styling the buttons to insert gifs or images
-        .custom-file-upload {
-            display: inline-block;
-            position: relative;
-            //defining size of the button
-            height: 50px;
-            width: 50px;
-            margin-top: 10px;
-            border-radius: 50%;
-            @include shadow;
-
-            &:nth-of-type(2) {
-                //margin-left to the second button
-                margin-left: 10px;
-            }
-
-            input[type="file"] {
-                //making the actual input invisible
-                position: absolute;
-                left: 0;
-                opacity: 0;
-                top: 0;
-                bottom: 0;
-                width: 100%;
-            }
-
-            i {
-                //centering icon
-                position: absolute;
-                left: 0;
-                top: 0;
-                bottom: 0;
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                //color of the icon
-                color: $accent-color;
-            }
+            margin-left: 20px; //margin to the comment bloc
         }
     }
 }
