--- a/frontend/sass/base/_reset.scss
+++ b/frontend/sass/base/_reset.scss
@@ -1,20 +1,23 @@
+//here are the default styles applied across the whole code
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     background-color: $background-color;
 
-    :focus {
+    & :focus {
         //border on focus
-        outline: none;
-        background-color: $focus-color !important;
+        outline: none; //removing default outline
+        background-color: $focus-color;
     }
 }
 
 i {
-    background-color: transparent;
+    background-color: transparent; // removing the background-color on the icons
 }
 
+//styling the body to remove horizontal scrolling
 body {
     max-width: 100%;
     overflow-x: hidden;
