--- a/frontend/sass/layout/_general.scss
+++ b/frontend/sass/layout/_general.scss
@@ -1,3 +1,5 @@
+//this is where the genral layout of the website is defined
+
 main {
     //lowering content so it isn't hidden by header + adding some padding for aesthetic purpose
     padding-top: $header-height + 40px;
@@ -11,9 +13,8 @@ main {
     align-items: center;
 }
 
+//blocs are the containers (ie: forms, publications, etc.) this guarantees the consistency of the layout
 .bloc {
-    //blocs size
-
     //for screens larger than a smarthphone in portrait mode
     @media screen and (min-width: 767px) {
         min-width: 400px; //400 px to make sure there is some space around the bloc even in smaller resolutions
