--- a/frontend/sass/styles.css
+++ b/frontend/sass/styles.css
@@ -14,7 +14,7 @@
 
 * :focus {
   outline: none;
-  background-color: #d1d9e6 !important;
+  background-color: #d1d9e6;
 }
 
 i {
@@ -291,6 +291,10 @@ button:disabled {
   .formSubmit {
     font-size: 18px;
   }
+}
+
+.formSubmit :focus {
+  background-color: #d1d9e6;
 }
 
 .formExit {
@@ -576,7 +580,6 @@ input:focus {
   top: 0;
   bottom: 0;
   width: 100%;
-  outline: 2px solid aquamarine;
 }
 
 .inscription form .imgUpload .custom-file-upload {
@@ -610,6 +613,65 @@ input:focus {
   .filActualite i {
     font-size: 35px;
   }
+}
+
+.filActualite .post__line--media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media only screen and (max-width: 420px) {
+  .filActualite .post__line--media {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+}
+
+.filActualite .post__line--media .custom-file-upload {
+  display: inline-block;
+  position: relative;
+  height: 50px;
+  width: 50px;
+  margin-top: 10px;
+  border-radius: 50%;
+  -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
+          box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
+}
+
+.filActualite .post__line--media .custom-file-upload:nth-of-type(2) {
+  margin-left: 10px;
+}
+
+.filActualite .post__line--media .custom-file-upload input[type="file"] {
+  position: absolute;
+  left: 0;
+  opacity: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.filActualite .post__line--media .custom-file-upload i {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #091f43;
 }
 
 .filActualite .writeLine {
@@ -702,11 +764,11 @@ input:focus {
   margin-bottom: 20px;
 }
 
-.filActualite .publicationContent img {
+.filActualite .publication__content img {
   max-width: 100%;
 }
 
-.filActualite .publicationContent p {
+.filActualite .publication__content p {
   margin: 10px 0;
 }
 
@@ -721,70 +783,7 @@ input:focus {
   color: #d1515a;
 }
 
-.filActualite .reactionLine i :focus {
-  color: #091f43;
-}
-
 .filActualite .reactionLine--comments {
   margin-left: 20px;
-}
-
-.filActualite .post__line--media {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-@media only screen and (max-width: 420px) {
-  .filActualite .post__line--media {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
-}
-
-.filActualite .post__line--media .custom-file-upload {
-  display: inline-block;
-  position: relative;
-  height: 50px;
-  width: 50px;
-  margin-top: 10px;
-  border-radius: 50%;
-  -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
-          box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
-}
-
-.filActualite .post__line--media .custom-file-upload:nth-of-type(2) {
-  margin-left: 10px;
-}
-
-.filActualite .post__line--media .custom-file-upload input[type="file"] {
-  position: absolute;
-  left: 0;
-  opacity: 0;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-}
-
-.filActualite .post__line--media .custom-file-upload i {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  color: #091f43;
 }
 /*# sourceMappingURL=styles.css.map */
