--- a/frontend/sass/styles.scss
+++ b/frontend/sass/styles.scss
@@ -15,8 +15,8 @@
 @import "layout/header", "layout/general";
 
 // 5. Components
-@import "components/animations", "components/button", "components/inputs",
-    "components/logo", "components/avatar", "components/admin";
+@import "components/animations", "components/button", "components/inputs", "components/logo", "components/avatar",
+    "components/admin";
 
 // 6. Page-specific styles
 @import "pages/connexion", "pages/inscription", "pages/feed";
