fixing the submit button of the login and signup pages ( grey on focus)

--- a/frontend/sass/base/_reset.scss
+++ b/frontend/sass/base/_reset.scss
@@ -6,10 +6,14 @@
     box-sizing: border-box;
     background-color: $background-color;
 
-    & :focus {
+    :focus {
         //border on focus
         outline: none; //removing default outline
         background-color: $focus-color;
+    }
+
+    :disabled {
+        background-color: $disabled-color !important;
     }
 }
 
