back to top on click on the logo

--- a/frontend/sass/base/_reset.scss
+++ b/frontend/sass/base/_reset.scss
@@ -13,7 +13,7 @@
     }
 
     :disabled {
-        background-color: $disabled-color !important;
+        background-color: $disabled-color;
     }
 }
 
