using text areas instead of input for posting and commenting

--- a/frontend/sass/components/_inputs.scss
+++ b/frontend/sass/components/_inputs.scss
@@ -1,6 +1,7 @@
 // here is the style for all the inputs
 
-input {
+input,
+textarea {
     //size of elements
     height: 50px;
     padding: 10px 20px;
