--- a/frontend/sass/styles.css
+++ b/frontend/sass/styles.css
@@ -318,7 +318,8 @@ button {
   }
 }
 
-input {
+input,
+textarea {
   height: 50px;
   padding: 10px 20px;
   border: none;
@@ -327,7 +328,8 @@ input {
   border-radius: 20px;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
   -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
           box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
 }
@@ -702,7 +704,9 @@ input:focus {
   opacity: 0;
 }
 
-.filActualite .writeLine input {
+.filActualite .writeLine textarea {
+  resize: none;
+  overflow: auto;
   width: 100%;
   max-width: 50ch;
   margin-left: 10px;
@@ -710,7 +714,7 @@ input:focus {
 }
 
 @media only screen and (max-width: 420px) {
-  .filActualite .writeLine input {
+  .filActualite .writeLine textarea {
     padding: 8px;
   }
 }
