--- a/frontend/sass/components/_inputs.scss
+++ b/frontend/sass/components/_inputs.scss
@@ -1,9 +1,22 @@
 // here is the style for all the inputs
 
-input,
-textarea {
+input {
     //size of elements
     height: 50px;
+    padding: 10px 20px;
+    //removing default border
+    border: none;
+    //using neumorphic inner shadow and corners rounding
+    @include inner-shadow;
+    @include card;
+
+    &:focus {
+        @include shadow;
+    }
+}
+
+textarea {
+    //size of elements
     padding: 10px 20px;
     //removing default border
     border: none;
