--- a/frontend/sass/styles.css
+++ b/frontend/sass/styles.css
@@ -89,10 +89,6 @@ header .logo {
   max-width: 60%;
 }
 
-header .logo a:focus {
-  background-color: turquoise;
-}
-
 header .dropdown__btn {
   cursor: pointer;
 }
@@ -318,8 +314,7 @@ button {
   }
 }
 
-input,
-textarea {
+input {
   height: 50px;
   padding: 10px 20px;
   border: none;
@@ -328,7 +323,19 @@ textarea {
   border-radius: 20px;
 }
 
-input:focus,
+input:focus {
+  -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
+          box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
+}
+
+textarea {
+  padding: 10px 20px;
+  border: none;
+  -webkit-box-shadow: inset -2px -2px 8px #ffffff, inset 2px 2px 8px #d1d9e6;
+          box-shadow: inset -2px -2px 8px #ffffff, inset 2px 2px 8px #d1d9e6;
+  border-radius: 20px;
+}
+
 textarea:focus {
   -webkit-box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
           box-shadow: -5px -5px 15px #ffffff, 5px 5px 15px #d1d9e6;
@@ -706,7 +713,10 @@ textarea:focus {
 
 .filActualite .writeLine textarea {
   resize: none;
-  overflow: auto;
+  overflow: hidden;
+  display: block;
+  -webkit-box-sizing: padding-box !important;
+          box-sizing: padding-box !important;
   width: 100%;
   max-width: 50ch;
   margin-left: 10px;
