--- a/frontend/sass/pages/_feed.scss
+++ b/frontend/sass/pages/_feed.scss
@@ -22,6 +22,7 @@
             opacity: 0;
         }
 
+        //text area styling
         //part of it is already styled at components/input
         textarea {
             resize: none; //removing the default resize thingy
