--- a/frontend/sass/pages/_feed.scss
+++ b/frontend/sass/pages/_feed.scss
@@ -158,10 +158,12 @@
         i {
             cursor: pointer;
             color: $primary-color;
+
+            transition: 0.2s;
             &:focus {
                 background-color: transparent;
-                transform: scale(1.1, 1.1);
-                transition: 0.1s;
+                transform: scale(1.1, 1.1) rotate(5deg);
+                transition: 0.2s;
             }
         }
 
